--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "fs": "0.0.1-security",
     "joi": "^14.3.1",
     "js-sha256": "^0.9.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "util": "^0.12.1"
   }
 }
